src/objects/Apttus_Config2__ApplicationSetting__c.object
<CustomObject>
    <description>Object to contain metadata about application settings</description>
    <fields>
        <fullName>Apttus_Config2__CustomSettingName__c</fullName>
        <description>API Name of the Custom Setting which contains the setting associated with this record</description>
        <inlineHelpText>API Name of the Custom Setting which contains the setting associated with this record</inlineHelpText>
        <label>Custom Setting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomSettingRecordName__c</fullName>
        <description>The record name of the custom setting (Eg System Properties)</description>
        <inlineHelpText>The record name of the custom setting (Eg System Properties)</inlineHelpText>
        <label>Custom Setting Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DataType__c</fullName>
        <description>The type of field in application setting</description>
        <inlineHelpText>The type of field in application setting</inlineHelpText>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultValue__c</fullName>
        <description>Field to specify default value for this setting</description>
        <inlineHelpText>Field to specify default value for this setting</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisplayType__c</fullName>
        <description>Display type of the field in application setting</description>
        <inlineHelpText>Display type of the field in application setting</inlineHelpText>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Multi-Select Checkbox</fullName>
                </value>
                <value>
                    <fullName>Boolean Checkbox</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Radio Button</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExternalId__c</fullName>
        <description>External Id pointing to the original ApplicationSetting__c record</description>
        <inlineHelpText>External Id pointing to the original ApplicationSetting__c record</inlineHelpText>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExternalSettingGroupId__c</fullName>
        <description>External Id pointing to the SettingGroup__c original parent record</description>
        <inlineHelpText>External Id pointing to the SettingGroup__c original parent record</inlineHelpText>
        <label>ExternalSettingGroupId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldLabel__c</fullName>
        <description>The label of the application setting</description>
        <inlineHelpText>The label of the application setting</inlineHelpText>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldName__c</fullName>
        <description>Field to contain the Field Name from the associated Custom Setting</description>
        <inlineHelpText>Field to contain the Field Name from the associated Custom Setting</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldPrecision__c</fullName>
        <label>Field Precision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HelpLink__c</fullName>
        <description>The URL accompanying the custom setting for more information</description>
        <inlineHelpText>The URL accompanying the custom setting for more information</inlineHelpText>
        <label>Help Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HelpText__c</fullName>
        <description>The help text accompanying the custom setting</description>
        <inlineHelpText>The help text accompanying the custom setting</inlineHelpText>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsPicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to specify whether the referenced setting is to be displayed as a picklist</description>
        <inlineHelpText>Field to specify whether the referenced setting is to be displayed as a picklist</inlineHelpText>
        <label>Is Picklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ObjectNameForPicklistOptions__c</fullName>
        <description>Field to specify API Name of an object, whose fields need to be displayed as available options if the setting is a picklist</description>
        <inlineHelpText>Field to specify API Name of an object, whose fields need to be displayed as available options if the setting is a picklist</inlineHelpText>
        <label>Object Name For Picklist Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RecordKey__c</fullName>
        <description>Field to contain the Record Key used to identify record(s) in the associated Custom Setting</description>
        <inlineHelpText>Field to contain the Record Key used to identify record(s) in the associated Custom Setting</inlineHelpText>
        <label>Record Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SettingGroupId__c</fullName>
        <description>Parent group of this setting</description>
        <inlineHelpText>Parent group of this setting</inlineHelpText>
        <label>Setting Group</label>
        <referenceTo>Apttus_Config2__SettingGroup__c</referenceTo>
        <relationshipLabel>ApplicationSettings</relationshipLabel>
        <relationshipName>ApplicationSettings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StaticPicklistOptions__c</fullName>
        <description>Field to contain a comma-separated list of available options if the setting is a picklist</description>
        <inlineHelpText>Field to contain a comma-separated list of available options if the setting is a picklist</inlineHelpText>
        <label>Static Picklist Options</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__URL__c</fullName>
        <description>The URL accompanying the custom setting for more information</description>
        <inlineHelpText>The URL accompanying the custom setting for more information</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application Setting</label>
    <nameField>
        <label>Application Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>